Resumen agenda ajustes

--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-6 overview-box-text">
                     <h5>Conferencistas</h5>
-                    <span>Sperakers</span>
+                    <span>Speakers</span>
                 </div>
                 <div class="col-3 overview-box-status">
                     32
@@ -55,7 +55,7 @@
                     <img src="assets/layout/images/dashboard/icon-usersonline.png" alt="mirage-layout" />
                 </div>
                 <div class="col-6 overview-box-text">
-                    <h5>Patrociandores</h5>
+                    <h5>Patrocinadores</h5>
                     <span>Sponsors & Allies</span>
                 </div>
                 <div class="col-3 overview-box-status">
@@ -92,11 +92,13 @@
                             Es un evento presencial de 2 días en el que se reunirán los principales actores del hidrógeno en Colombia y América Latina, 
                             donde se abordarán las principales temáticas del desarrollo del H2 y sus derivados, tales como escenarios de demanda, 
                             tecnologías de producción, proyectos y pilotos y los distintos marcos políticos y regulatorios pioneros en la región.</p>
-                        <div class="grid link">
-                            <div class="col-9">
-                                <a href="https://hidrogenocolombia.com">Website Hidrógeno Colombia<i class="pi pi-arrow-right"></i></a>
+                            <div class="grid link">
+                                <div class="col-9">
+                                    <a href="https://hidrogenocolombia.com" target="_blank">
+                                        Website Hidrógeno Colombia<i class="pi pi-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
                     </div>
 <!--                     <div class="card news news-3">
                         <div class="news-title">
