--- a/src/app/demo/view/evento.component.html
+++ b/src/app/demo/view/evento.component.html
@@ -12,10 +12,12 @@
 									</div>
                                 </div>
                             </div>
-							<div class="store-card-content">
+							<div class="store-card-icons">
+								<span><i class="pi pi-clock"></i> {{evento.eve_hora}}</span>
+							</div>							
+							<div class="store-card-content" style="text-align: justify; padding: 15px;">
 								<span>{{evento.eve_resumen}}</span>	
-								<br><br>
-								<span><i class="pi pi-clock"></i> {{evento.eve_hora}}</span><br>
+								<br>
 							</div>
                         </div>	
 					</div>
