Fix chat content automatic update

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -492,7 +492,7 @@
                     </div>
 
                     <textarea class="form-control emojionearea-form-control" id="messageInput" [(ngModel)]="mensaje" id="mensaje" ></textarea>
-                    <div class="btn btn-primary btn-icon send-icon rounded-circle text-light mb-1" (click)="sendMessageTexto()" role="button">
+                    <div class="btn btn-primary btn-icon send-icon rounded-circle text-light mb-1" (click)="sendMessageText()" role="button">
                         <svg class="hw-24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
                         </svg>
