--- a/src/app/demo/view/sponsors.component.html
+++ b/src/app/demo/view/sponsors.component.html
@@ -3,12 +3,32 @@
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
-                    <h5>Aliados estratégicos</h5>
+                    <h5>Patrocinador oficial</h5>
                 </div>
             </div>			
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
-					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors1">
+					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors0">
+                        <div class="store-card">
+							<div class="store-card-image">
+								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
+							</div>	
+                        </div>	
+					</div>
+				</div>
+			</div>
+		</div>		
+	</div>
+	<div class="col-12">
+		<div class="card widget-store-items">
+            <div class="grid grid-nogutter">
+                <div class="col-12 title">
+                    <h5>Patrocinadores oro</h5>
+                </div>
+            </div>			
+			<div class="store-cards-container" >
+				<div class="grid store-cards">
+					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsorsoro">
                         <div class="store-card">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
@@ -38,6 +58,26 @@
 				</div>
 			</div>
 		</div>		
+	</div>	
+	<div class="col-12">
+		<div class="card widget-store-items">
+            <div class="grid grid-nogutter">
+                <div class="col-12 title">
+                    <h5>Aliados estratégicos</h5>
+                </div>
+            </div>			
+			<div class="store-cards-container" >
+				<div class="grid store-cards">
+					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors1">
+                        <div class="store-card">
+							<div class="store-card-image">
+								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
+							</div>	
+                        </div>	
+					</div>
+				</div>
+			</div>
+		</div>		
 	</div>
 	<div class="col-12">
 		<div class="card widget-store-items">
@@ -58,5 +98,25 @@
 				</div>
 			</div>
 		</div>		
-	</div>									
+	</div>
+	<div class="col-12">
+		<div class="card widget-store-items">
+            <div class="grid grid-nogutter">
+                <div class="col-12 title">
+                    <h5>Apoya</h5>
+                </div>
+            </div>			
+			<div class="store-cards-container" >
+				<div class="grid store-cards">
+					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsorsapoya">
+                        <div class="store-card">
+							<div class="store-card-image">
+								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
+							</div>	
+                        </div>	
+					</div>
+				</div>
+			</div>
+		</div>		
+	</div>											
 </div>
