--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -26,7 +26,7 @@
                     <span>Speakers</span>
                 </div>
                 <div class="col-3 overview-box-status">
-                    32
+                    {{cantPersonas}}
                 </div>
             </div>
         </a>
@@ -43,7 +43,7 @@
                     <span>Chat con asistentes</span>
                 </div>
                 <div class="col-3 overview-box-status">
-                    200
+                    {{cantUsuarios}}
                 </div>
             </div>
         </a>
@@ -59,7 +59,7 @@
                     <span>Sponsors & Allies</span>
                 </div>
                 <div class="col-3 overview-box-status">
-                    256
+                    {{cantPatrocinadores}}
                 </div>
             </div>
         </a>
@@ -95,7 +95,7 @@
                             <div class="grid link">
                                 <div class="col-9">
                                     <a href="https://hidrogenocolombia.com" target="_blank">
-                                        Website Hidrógeno Colombia<i class="pi pi-arrow-right"></i>
+                                        Hidrógeno Colombia | WEC <i class="pi pi-arrow-right"></i>
                                     </a>
                                 </div>
                             </div>
