--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -464,6 +464,12 @@
         
             <!-- Chat Body End -->
             <div class="d-flex flex-column justify-content-center text-center h-100 w-100" *ngIf="!to_user">
+                <button type="button" class="close" (click)="irAPaginaDash()" aria-label="Close" style="position: absolute;
+                top: 10px;
+                right: 10px;
+                transform: translate(-50%, 0%);">
+                    <span aria-hidden="true">&times;</span>
+                </button>
                 <div class="container">
                     <div class="avatar avatar-lg mb-2">
                         <img class="avatar-img" src="{{path}}{{user.avatar}}" alt="">
