--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -88,7 +88,7 @@ Run 'ng help' for more options.
             <p>Menu is a separate component defined in <i>app.menu.component.ts</i> file based on PrimeNG MenuModel API. In order to define the menuitems,
             navigate to this file and define your own model as a nested structure. Here is the menu component from the sample application.</p>
 
-<div style="height:400px;overflow: auto;">
+<div style="height:100vh;overflow: auto;">
 <app-code  ngPreserveWhitespaces ngNonBindable lang="javascript">
 @Component(&#123;
     selector: 'app-menu',
