--- a/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
@@ -1,5 +1,5 @@
-<div class="chat-content p-2">
-    <div class="container" >
+<div style="height:200px" >
+    <div class="container" id="ScrollChat" style="height: 100vh;overflow:auto;">
 
 
         <!-- Message Day Start -->
