--- a/src/app/modules/chat-panel/chat-panel.component.html
+++ b/src/app/modules/chat-panel/chat-panel.component.html
@@ -381,9 +381,9 @@
         </ul>
         <!-- Main Nav End -->
     </div>    <!-- Navigation Start -->
-
+<div style="height:400px;">
     <router-outlet></router-outlet>
-            <!-- App Add-ons Start -->
+</div> <!-- App Add-ons Start -->
 
 </div>
 
