--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -17,7 +17,7 @@
 
 <!--         <app-breadcrumb></app-breadcrumb> -->
 
-        <div class="layout-content">
+        <div class="layout-content" style="height:auto">
             <router-outlet></router-outlet>
         </div>
 
