Ajustes varios Moderador

--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -66,11 +66,11 @@
     </div>
     <div class="col-12 lg:col-12 ">
         <div class="grid flex-column grid-nogutter">
-            
-            <div class="col-12 widget-news">
+            <img src="assets/media/images/banner-news3.png" width="100%" style="border-radius: 0.5%;"/>
+<!--             <div class="col-12 widget-news">
                 <div class="news-row" [ngStyle]="{'transform': activeNews === 1 ? 'translate3d(0px, 0px, 0px)':activeNews === 2
                 ?'translate3d(-100%, 0px, 0px)':'translate3d(-200%, 0px, 0px)'}">
-<!--                     <div class="card news news-1 active-news">
+                     <div class="card news news-1 active-news">
                         <div class="news-title">
                             <h5>Información General</h5>
                         </div>
@@ -82,8 +82,8 @@
                                     class="pi pi-arrow-right"></i></a>
                             </div>
                         </div>
-                    </div> -->
-                    <div class="card news news-2 active-news">
+                    </div> 
+                     <div class="card news news-2 active-news">
                         <div class="news-title">
                             <h5>INFO</h5>
                         </div>
@@ -99,8 +99,12 @@
                                     </a>
                                 </div>
                             </div>
+                    </div> 
+                    <div class="card">
+                        
                     </div>
-<!--                     <div class="card news news-3">
+
+                     <div class="card news news-3">
                         <div class="news-title">
                             <h5>NEWS</h5>
                         </div>
@@ -113,16 +117,16 @@
                                 <a href="">Learn more at CNET <i class="pi pi-arrow-right"></i></a>
                             </div>
                         </div>
-                    </div> -->
+                    </div> 
                 </div>
                 <div class="link-points">
                     <div class="grid points">
-<!--                         <div class="col-4 point point-1" [ngClass]="{'active-point': activeNews === 1}" (click)="activeNews = 1"></div> -->
+                         <div class="col-4 point point-1" [ngClass]="{'active-point': activeNews === 1}" (click)="activeNews = 1"></div>
                         <div class="col-4 point point-2 " [ngClass]="{'active-point': activeNews === 2}" (click)="activeNews = 2"></div>
-<!--                         <div class="col-4 point point-3 " [ngClass]="{'active-point': activeNews === 3}" (click)="activeNews = 3"></div> -->
+                         <div class="col-4 point point-3 " [ngClass]="{'active-point': activeNews === 3}" (click)="activeNews = 3"></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Write your comments here 
