--- a/src/app/demo/view/evento.component.html
+++ b/src/app/demo/view/evento.component.html
@@ -58,5 +58,39 @@
 				</div>
 			</div>
 		</div>
+		<div class="card widget-store-items" *ngIf="activa_modera">
+			<div class="grid grid-nogutter">
+				<div class="col-6 title">
+					<h5>Modera</h5>
+				</div>
+			</div>									
+			<div class="">
+				<div class="grid store-cards">
+					<div class="col-12 lg:col-6 md:col-6">
+						<div class="store-card">
+							<div class="store-card-content">
+								<p-table [value]="listaPersona2" sortMode="single">
+									<ng-template pTemplate="body" let-persona let-rowIndex="rowIndex">
+										<tr>
+											<td>
+												<a style="color: black;" (click)="irAPaginaDestino(persona.per_id)">
+													<div class="avatar avatar-md mr-2"><img src="assets/media/participantes/{{persona.per_foto}}" alt="mirage-layout" /></div>
+												</a>
+											</td>
+											<td>
+												<a style="color: black;" (click)="irAPaginaDestino(persona.per_id)">
+													<h5>{{persona.per_nombre}}</h5>
+													<span><small>{{persona.per_cargo}}</small></span>	
+												</a>											
+											</td>
+										</tr>
+									</ng-template>
+								</p-table> 							
+							</div>
+						</div>
+					</div>								
+				</div>
+			</div>
+		</div>		
 	</div>							
 </div>
