--- a/src/app/app.menu.component.html
+++ b/src/app/app.menu.component.html
@@ -7,7 +7,7 @@
         </a>
         <div>
         <a routerLink="/dash">
-            <img alt="logo" src="assets/layout/images/Logo_simplificado_fondo_blanco_40h.png" />
+            <img alt="logo" src="assets/layout/images/logo_hidro.svg" />
         </a>
     </div>
     </div>
