--- a/src/app/pages/app.login.component.html
+++ b/src/app/pages/app.login.component.html
@@ -4,7 +4,7 @@
         <div class="login-panel">
             <div class="login-panel-content">
                 <div class="logo">
-                    <img src="assets/layout/images/Logo_simplificado_transparente_80h.png" alt="mirage-layout" />
+                    <img src="assets/layout/images/logo_hidro.svg" alt="mirage-layout" />
                 </div>
                 <h1>Iniciar Sesión</h1>
                 <p>Bienvenido, por favor use el correo electrónico registrado para el evento</p>
