--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -607,6 +607,8 @@
                 <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="startConversationLabel">Participantes</h5>
+                   
+                   
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -663,8 +665,13 @@
                             <!-- List Group End -->
                         </div>
 
+                      
                         <div class="col-12">
-                            <h4>..        Grupos</h4>
+                           
+                            <hr>
+                            <h5>  <a href="#" role="button" data-toggle="modal" data-target="#createGroup" (click)="hideModal()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Crear grupo +</a> </h5>
+                            <hr>
+                          
                             <!-- List Group Start -->
                             <ul class="list-group list-group-flush">
 
@@ -707,29 +714,21 @@
                                 </button>
                             </div>
                             <div class="modal-body py-0 hide-scrollbar">
-                                <div class="row hide pt-2" data-step="1" data-title="Create a New Group">
+                                <div class="row hide pt-2" data-step="1" data-title="Crear nuevo Grupo">
                                     
                                     <div class="col-12">
                                         <div class="form-group">
                                             <label for="groupName">Nombre del Grupo</label>
-                                            <input type="text" class="form-control form-control-md" id="groupName" [(ngModel)]="nombreChatGrupal" placeholder="Type group name here">
+                                            <input type="text" class="form-control form-control-md" id="groupName" [(ngModel)]="nombreChatGrupal" placeholder="Ingrese el nombre del grupo">
                                         </div>
                                     </div>
-                                    <div class="col-12">
-                                        <div class="form-group">
-                                            <label>Choose profile picture</label>
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="profilePictureInput" accept="image/*">
-                                                <label class="custom-file-label" for="profilePictureInput">Choose file</label>
-                                                </div>
-                                        </div>
-                                    </div>
+                                   
         
                                     <div class="col-12">
                                         <div class="row">
                                             <div class="col-12">
                                                 <div class="form-group mb-0">
-                                                <label>Group privacy</label>
+                                                <label>..Privacidad del grupo</label>
                                                 </div>
                                             </div>
                                             <div class="col">
@@ -737,21 +736,12 @@
                                                 <div class="custom-control custom-radio">
                                                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
                                                     <label class="form-check-label" for="exampleRadios1">
-                                                        Public group
+                                                        Grupo público
                                                     </label>
                                                 </div>
                                                 </div>
                                             </div>
-                                            <div class="col">
-                                                <div class="form-group rounded p-2 border">
-                                                <div class="custom-control custom-radio">
-                                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                                                    <label class="form-check-label" for="exampleRadios2">
-                                                        Private group
-                                                    </label>
-                                                </div>
-                                                </div>
-                                            </div>
+                                            
                                             </div>
                                     </div>
                                 
@@ -831,8 +821,8 @@
                                                 <!-- Alternate :: External File link -->
                                                 <!-- <img class="injectable hw-24" src="./assets/media/heroicons/outline/check.svg" alt=""> -->
                                             </div>
-                                            <h6>Group Created Successfully</h6>
-                                            <p class="text-muted text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cumque laborum fugiat vero pariatur provident!</p>
+                                            <h6>Grupo creado satisfactoriamente</h6>
+                                            <p class="text-muted text-center"></p>
                                         </div>
                                     </div>
                                 </div>
