Creacion grupos movile

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -685,7 +685,7 @@
 
                                     <div class="media-body">
                                         <h6 class="text-truncate">
-                                            <a style="cursor: pointer;" (click)="startChat(groupons.id)" class="text-reset">{{groupons.name}}</a>
+                                            <a style="cursor: pointer;" (click)="startChatGroup(groupons.id)" class="text-reset">{{groupons.name}}</a>
                                         </h6>
 
                                         <p class="text-muted mb-0">Online</p>
