--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -646,7 +646,7 @@
                                 <li class="list-group-item" *ngFor="let user of users_contacts">
                                     <div class="media">
                                         <div class="avatar avatar-online mr-2">
-                                            <img src={{path}}{{user.usr_avatar}} alt="">
+                                            <img src={{path}}{{user.avatar}} alt="">
                                           
                                         </div>
 
