--- a/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
@@ -184,7 +184,7 @@
         <!-- Message Day End -->
 
         <!-- Message Day Start -->
-
+    </div>
 
     <!-- Scroll to finish -->
     <div class="chat-finished" id="chat-finished"></div>
