Fix error avatar

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -771,7 +771,7 @@
                                                 <div class="media">
                                                     <div class="media">
                                                                 <div class="avatar avatar-online mr-2">
-                                                                    <img src={{path}}{{user.usr_avatar}} alt="">
+                                                                    <img src={{path}}{{user.avatar}} alt="">
                                                                 
                                                                 </div>
 
