Cambio de archivos

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -104,7 +104,7 @@
                                            </span>
                                            <span *ngIf="item.group_chat">
 
-                                            <img class="injectable" src="{{oathgrupo}}"/>
+                                            <img class="injectable" src="{{path}}{{item.group_chat.avatar}}"/>
                                             </span>
                                         </div>
                                         <div class="contacts-content">
