--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -693,7 +693,7 @@
             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-dialog-zoom">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="startConversationLabel">Participantes</h5>
+                    <h5 class="modal-title" id="startConversationLabel">Iniciar Chat</h5>
                    
                    
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -841,7 +841,7 @@
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-dialog-zoom">
                         <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="chatActivosLabel">Participantes</h5>
+                            <h5 class="modal-title" id="chatActivosLabel">Chats Activos</h5>
                            
                            
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
