Revert "Fix bug chat desde agenda"
This reverts commit 004ab18ac73f393130702b11185e9e00c9e51c48.

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -99,8 +99,8 @@
                                             </div>
                                             <div class="contacts-texts">
                                                 <p class="text-truncate">
-                                                    <span  *ngIf="item.last_message_is_my">Yo: </span>
-                                                    <span   *ngIf="!item.last_message_is_my">Dice: </span>
+                                                    <span  *ngIf="item.last_message_is_my">YO: </span>
+                                                    <span   *ngIf="!item.last_message_is_my">DICE: </span>
                                                     {{item.last_message}}
                                                    <div class="badge badge-rounded badge-primary ml-1" *ngIf="item.count_message >0 ">{{item.count_message}}</div> 
                                             </div>
@@ -907,8 +907,8 @@
                                                              </div>
                                                              <div class="contacts-texts">
                                                                  <p class="text-truncate">
-                                                                     <span  *ngIf="item.last_message_is_my">Yo: </span>
-                                                                     <span   *ngIf="!item.last_message_is_my">Dice: </span>
+                                                                     <span  *ngIf="item.last_message_is_my">YO: </span>
+                                                                     <span   *ngIf="!item.last_message_is_my">DICE: </span>
                                                                      {{item.last_message}}
                                                                     <div class="badge badge-rounded badge-primary ml-1" *ngIf="item.count_message >0 ">{{item.count_message}}</div> 
                                                              </div>
